--- a/app.yaml
+++ b/app.yaml
@@ -10,13 +10,15 @@ handlers:
 - url: /js
   static_dir: js
 - url: /test.*
-  script: gaeunit.py
+  script: gaeunit.app
 - url: /.*
   script: app.app
 
 libraries:
 - name: jinja2
   version: 2.6
+- name: django
+  version: 1.3
 
 inbound_services:
 - channel_presence
