add an installer (just to add things to the database), login is now basically working

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
 [submodule "babel"]
 	path = babel
 	url = ./babel
+    ignore = dirty
 [submodule "pytz"]
-	path = pytz
+    path = pytz
 	url = ./pytz
+    ignore = dirty
