add homepage, fix bugs in cookie implementation, now it works

--- a/index.yaml
+++ b/index.yaml
@@ -13,5 +13,10 @@ indexes:
 - kind: UserModel
   properties:
   - name: nickname
+  - name: email
+
+- kind: UserModel
+  properties:
+  - name: nickname
   - name: password
   - name: verified
