big commit: finish the mail confirmation functionality, fix bugs and numerous changes

--- a/index.yaml
+++ b/index.yaml
@@ -20,6 +20,11 @@ indexes:
   - name: visible
   - name: name
 
+- kind: UserConfirmationModel
+  properties:
+  - name: nickname
+  - name: token
+
 - kind: UserModel
   properties:
   - name: nickname
