use webapp2's improved URI routing mechanism, and update the code to match it

--- a/index.yaml
+++ b/index.yaml
@@ -22,19 +22,8 @@ indexes:
 
 - kind: UserConfirmationModel
   properties:
-  - name: nickname
+  - name: username
   - name: token
-
-- kind: UserModel
-  properties:
-  - name: nickname
-  - name: email
-
-- kind: UserModel
-  properties:
-  - name: nickname
-  - name: password
-  - name: verified
 
 - kind: UserModel
   properties:
