Full of changes and additions: * Restructure the posting system, make new abstractions. * Make blog commenting system. * Various changes to related things.

--- a/index.yaml
+++ b/index.yaml
@@ -20,6 +20,11 @@ indexes:
   - name: visible
   - name: name
 
+- kind: SlavePostModel
+  ancestor: yes
+  properties:
+  - name: created
+
 - kind: UserConfirmationModel
   properties:
   - name: username
