--- a/index.yaml
+++ b/index.yaml
@@ -10,6 +10,17 @@ indexes:
 # automatically uploaded to the admin console when you next deploy
 # your application using appcfg.py.
 
+- kind: CommentModel
+  ancestor: yes
+  properties:
+  - name: created
+
+- kind: CommentModel
+  ancestor: yes
+  properties:
+  - name: created
+    direction: desc
+
 - kind: ConfigModel
   properties:
   - name: name
