--- a/app.yaml
+++ b/app.yaml
@@ -35,8 +35,7 @@ handlers:
 libraries:
 - name: jinja2
   version: 2.6
+- name: lxml
+  version: 2.3
 - name: django
   version: 1.3
-
-inbound_services:
-- channel_presence
