--- a/index.yaml
+++ b/index.yaml
@@ -31,6 +31,11 @@ indexes:
   - name: visible
   - name: name
 
+- kind: ReplyModel
+  ancestor: yes
+  properties:
+  - name: created
+
 - kind: SlavePostModel
   ancestor: yes
   properties:
